Added the fitness site to the main site.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="split-right" style="background-image: url('img/Inaction.jpg');">
                 <h2>Fitness Web Development</h2>
-                <a href="#" class="cta-button">Explore Fitness</a>
+                <a href="Fitness Site/index.html" class="cta-button">Explore Fitness</a>
             </div>
         </div>
     </section>
