Fixed image paths issue for About and services sections.

--- a/Fitness Site/about.html
+++ b/Fitness Site/about.html
@@ -56,7 +56,7 @@
                 </div>
                 <!-- Image -->
                 <div class="col-lg-6">
-                    <img src="/Fitness Site/img/Close Colour.jpg" class="img-fluid" alt="About Image">
+                    <img src="img/Close Colour.jpg" class="img-fluid" alt="About Image">
                 </div>
             </div>
         </div>
