--- a/Fitness Site/services.html
+++ b/Fitness Site/services.html
@@ -36,33 +36,33 @@
 
         <div class="gallery-container">
             <div class="gallery">
-                <a href="/Fitness Site/img/Close Colour.jpg">
-                    <img src="/Fitness Site/img/Close Colour.jpg" alt="Cinque Terre">
+                <a href="img/Close Colour.jpg">
+                    <img src="img/Close Colour.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <!-- Add more galleries here -->
             <div class="gallery">
-                <a href="/Fitness Site/img/Close Colour.jpg">
-                    <img src="/Fitness Site/img/Close Colour.jpg" alt="Cinque Terre">
+                <a href="img/Close Colour.jpg">
+                    <img src="img/Close Colour.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <div class="gallery">
-                <a href="/Fitness Site/img/Close Colour.jpg">
-                    <img src="/Fitness Site/img/Close Colour.jpg" alt="Cinque Terre">
+                <a href="img/Close Colour.jpg">
+                    <img src="img/Close Colour.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <div class="gallery">
-                <a href="/Fitness Site/img/Close Colour.jpg">
-                    <img src="/Fitness Site/img/Close Colour.jpg" alt="Cinque Terre">
+                <a href="img/Close Colour.jpg">
+                    <img src="img/Close Colour.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <div class="gallery">
-                <a href="/Fitness Site/img/Close Colour.jpg">
-                    <img src="/Fitness Site/img/Close Colour.jpg" alt="Cinque Terre">
+                <a href="img/Close Colour.jpg">
+                    <img src="img/Close Colour.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
@@ -76,33 +76,33 @@
         </p>
         <div class="gallery-container">
             <div class="gallery">
-                <a href="/Fitness Site/img/Close Colour.jpg">
-                    <img src="/Fitness Site/img/Close Colour.jpg" alt="Cinque Terre">
+                <a href="img/Close Colour.jpg">
+                    <img src="img/Close Colour.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <!-- Add more galleries here -->
             <div class="gallery">
-                <a href="/Fitness Site/img/Close Colour.jpg">
-                    <img src="/Fitness Site/img/Close Colour.jpg" alt="Cinque Terre">
+                <a href="img/Close Colour.jpg">
+                    <img src="img/Close Colour.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <div class="gallery">
-                <a href="/Fitness Site/img/Close Colour.jpg">
-                    <img src="/Fitness Site/img/Close Colour.jpg" alt="Cinque Terre">
+                <a href="img/Close Colour.jpg">
+                    <img src="img/Close Colour.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <div class="gallery">
-                <a href="/Fitness Site/img/Close Colour.jpg">
-                    <img src="/Fitness Site/img/Close Colour.jpg" alt="Cinque Terre">
+                <a href="img/Close Colour.jpg">
+                    <img src="img/Close Colour.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <div class="gallery">
-                <a href="/Fitness Site/img/Close Colour.jpg">
-                    <img src="/Fitness Site/img/Close Colour.jpg" alt="Cinque Terre">
+                <a href="img/Close Colour.jpg">
+                    <img src="img/Close Colour.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
@@ -115,33 +115,33 @@
         <p>This site option is aimed at gym and studio owners.</p>
         <div class="gallery-container">
             <div class="gallery">
-                <a href="/Fitness Site/img/Soon.jpg">
-                    <img src="/Fitness Site/img/Soon.jpg" alt="Cinque Terre">
+                <a href="img/Soon.jpg">
+                    <img src="img/Soon.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <!-- Add more galleries here -->
             <div class="gallery">
-                <a href="/Fitness Site/img/Soon.jpg">
-                    <img src="/Fitness Site/img/Soon.jpg" alt="Cinque Terre">
+                <a href="img/Soon.jpg">
+                    <img src="img/Soon.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <div class="gallery">
-                <a href="/Fitness Site/img/Soon.jpg">
-                    <img src="/Fitness Site/img/Soon.jpg" alt="Cinque Terre">
+                <a href="img/Soon.jpg">
+                    <img src="img/Soon.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <div class="gallery">
-                <a href="/Fitness Site/img/Soon.jpg">
-                    <img src="/Fitness Site/img/Soon.jpg" alt="Cinque Terre">
+                <a href="img/Soon.jpg">
+                    <img src="img/Soon.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
             <div class="gallery">
-                <a href="/Fitness Site/img/Soon.jpg">
-                    <img src="/Fitness Site/img/Soon.jpg" alt="Cinque Terre">
+                <a href="/img/Soon.jpg">
+                    <img src="img/Soon.jpg" alt="Cinque Terre">
                 </a>
                 <div class="desc">Add a description of the image here</div>
             </div>
