Changed layout on the about page

--- a/Fitness Site/about.html
+++ b/Fitness Site/about.html
@@ -43,25 +43,25 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
-        <div class="container">
-            <div class="row align-items-center">
-                <!-- Text Content -->
-                <div class="col-lg-6">
-                    <h2>Building on my passion for fitness and web design, I had a vision to combine fitness and web
-                        design. And now, I get to create an experience for everyone.</h2>
-                    <hr class="short-hr">
-                    <p>Born and raised in Fife, Scotland, with over 10 years of fitness industry experience, I found a
-                        unique passion to combine fitness and web design. Leading me to build custom websites for the
-                        fitness industry.</p>
-                </div>
-                <!-- Image -->
-                <div class="col-lg-6">
-                    <img src="img/CloseColour.jpg" class="img-fluid" alt="About Image">
-                </div>
+    <div class="container">
+        <div class="row align-items-center">
+            <!-- Text Content -->
+            <div class="col-lg-6">
+                <h2>Building on my passion for fitness and web design, I had a vision to combine fitness and web
+                    design. And now, I get to create an experience for everyone.</h2>
+                <hr class="short-hr">
+                <p>Born and raised in Fife, Scotland, with over 10 years of fitness industry experience, I found a
+                    unique passion to combine fitness and web design. Leading me to build custom websites for the
+                    fitness industry.</p>
+            </div>
+            <!-- Image -->
+            <div class="col-lg-6">
+                <img src="img/Close%20Colour.jpg" class="img-fluid" alt="About Image">
             </div>
         </div>
-    </section>
-    
+    </div>
+</section>
+
 
     <div class="hire-me">
         <a href="#" class="cta-button">Hire Me</a>
