Added new contact page

--- a/Fitness Site/index.html
+++ b/Fitness Site/index.html
@@ -11,24 +11,30 @@
 <body>
 
     <!--Hero Section -->
-<div class="main-container">
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <div class="main-container">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
 
-    </nav>
+            <div class="main-site">
+                <a href="../index.html">Main Site</a>
+            </div>
+        </nav>
 
-    <p>
-        Welcome to our fitness website! Our mission is to help fitness professionals build an online presence by providing <br>personalised websites. We offer a variety of services, including single page websites, hybrid sites for online and gym-based coaching, <br> and coming soon fully integrated website for gym and studio owners.<br><br> Join us today and let's make your online business a success!
-        <br><br>
-        For more information, please visit our <a href="about.html">About Us</a> page. or call us at (123) 456-7890.
+        <p>
+            Welcome to our fitness website! Our mission is to help fitness professionals build an online presence by
+            providing <br>personalised websites. We offer a variety of services, including single page websites, hybrid
+            sites for online and gym-based coaching, <br> and coming soon fully integrated website for gym and studio
+            owners.<br><br> Join us today and let's make your online business a success!
+            <br><br>
+            For more information, please visit our <a href="about.html">About Us</a> page. or call us at (123) 456-7890.
         </p>
-    
-        
+
+
         <div class="button">
             <a href="#">Book a Consultation</a>
         </div>
@@ -36,23 +42,23 @@
         <div class="button">
             <a href="#">View Portfolio</a>
         </div>
-</div>
-<!-- End Hero Section -->
+    </div>
+    <!-- End Hero Section -->
 
-<h2>Davie Birrell</h2>
+    <h2>Davie Birrell</h2>
 
-<br><br>
+    <br><br>
 
-<h3>Web designer to the Fitness Industry
-    <br><br> ━━━ <!-- three horizontal lines -->
-</h3>
+    <h3>Web designer to the Fitness Industry
+        <br><br> ━━━ <!-- three horizontal lines -->
+    </h3>
 
 
-<div class="email">
-<a href="#">email@email.com</a>
+    <div class="email">
+        <a href="#">email@email.com</a>
 
-<h3>Custom Built Websites</h3>
-</div>
+        <h3>Custom Built Websites</h3>
+    </div>
 
 </body>
 
